more airport list added with OAuth2.0 integration in claude and vs code
auth integrated

authentication works in claude Desktop

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,108 @@
-# Python-generated files
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[oc]
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+.Python
 build/
+develop-eggs/
 dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
 wheels/
-*.egg-info
+*.egg-info/
+
+# User-specific configuration files
+claude_desktop_config.json
+config.json
+*.config
+
+# Demo and test files
+demo_*.py
+test_*.py
+oauth_*.py
+start_*.py
+setup_*.py
+*_demo.py
+*_test.py
+
+# Temporary and cleanup files
+*.tmp
+*.log
+.DS_Store
+*SUMMARY.md
+*COMPLETE.md
+
+# VS Code extension (if developed separately)
+vscode-extension/
+
+# Monitor scripts
+monitor_*.sh
+.installed.cfg
+*.egg
 
 # Virtual environments
+.env
 .venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+logs/
+src/flight_booking_mcp/auth/*.log
+src/flight_booking_mcp/*.log
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Security files
+.secrets
+*.key
+*.pem
+
+# Testing
+.coverage
+.pytest_cache/
+htmlcov/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# uvicorn
+uvicorn.log
+
+# Development files
+README_OLD.md
